--- a/scripts/Part_3_scripts.Rmd
+++ b/scripts/Part_3_scripts.Rmd
@@ -28,6 +28,8 @@ First you'll plot a barplot of Sex to see how many males and females were record
 
 ```{r message = FALSE}
 # Plot barplot of passenger Sex
+ggplot(passengers, aes(x = Sex)) +
+  geom_bar()
 
 ```
 **What can you see here?** 
@@ -40,7 +42,8 @@ Now it's time for some scatter plots. Is the Age of any given passenger correlat
 
 ```{r message = FALSE}
 # Scatter plot of Age vs Fare
-
+ggplot(passengers, aes(x = Age, y = Fare)) +
+  geom_point()
 ```
 
 
@@ -48,7 +51,8 @@ Let's take the previous plot and color each point by Sex, to see any correlation
 
 ```{r message = FALSE}
 # Scatter plot of Age vs Fare colored by Sex
-
+ggplot(passengers %>% drop_na(), aes(x = Age, y = Fare, color = Sex)) +
+  geom_point()
 ```
 
 **What can you see here?** 
